...
                          ),
                          borderRadius: BorderRadius.circular(10),
                          // color: const Color(0xFF535699),
                        ),
                        alignment: Alignment.center,
                        child: TextFormField(
                          key: const ValueKey("full_name"),
                          controller: _fullnameController,
                          cursorColor: const Color(0xFF535699),
                          style: const TextStyle(
                            color: Color(0xFF535699),
                            fontFamily: 'Merienda',
                          ),
...
                          ),
                          borderRadius: BorderRadius.circular(10),
                          // color: const Color(0xFF535699),
                        ),
                        alignment: Alignment.center,
                        child: TextFormField(
                          key: const ValueKey("contact_no"),
                          controller: _contactnoController,
                          cursorColor: const Color(0xFF535699),
                          style: const TextStyle(
                            color: Color(0xFF535699),
                            fontFamily: 'Merienda',
                          ),
...
                          ),
                          borderRadius: BorderRadius.circular(10),
                          // color: const Color(0xFF535699),
                        ),
                        alignment: Alignment.center,
                        child: TextFormField(
                          key: const ValueKey("username"),
                          controller: _usernameController,
                          cursorColor: const Color(0xFF535699),
                          style: const TextStyle(
                            color: Color(0xFF535699),
                            fontFamily: 'Merienda',
                          ),
...
                          ),
                          borderRadius: BorderRadius.circular(10),
                          // color: const Color(0xFF535699),
                        ),
                        alignment: Alignment.center,
                        child: TextFormField(
                          key: const ValueKey("email"),
                          controller: _emailController,
                          cursorColor: const Color(0xFF535699),
                          style: const TextStyle(
                            color: Color(0xFF535699),
                            fontFamily: 'Merienda',
                          ),
...
                          ),
                          borderRadius: BorderRadius.circular(10),
                          // color: const Color(0xFF535699),
                        ),
                        alignment: Alignment.center,
                        child: TextFormField(
                          key: const ValueKey("password"),
                          controller: _passwordController,
                          cursorColor: const Color(0xFF535699),
                          style: const TextStyle(
                            color: Color(0xFF535699),
                            fontFamily: 'Merienda',
                          ),
...
                        height: 8,
                      ),
                      SizedBox(
                        height: 40,
                        width: 120,
                        child: ElevatedButton(
                          key: const ValueKey("signUpBtn"),
                          style: ElevatedButton.styleFrom(
                            primary: const Color(0xFF535699),
                            shape: const RoundedRectangleBorder(
                              borderRadius:
                                  BorderRadius.all(Radius.circular(12)),
                            ),
...
