...
                    ),
                  ],
                ),

//==============================Guitars Section================================
                const Text(
                  "Guitars",
                  style: TextStyle(
                    color: Color(0xFF535699),
                    fontWeight: FontWeight.bold,
                    fontSize: 20,
                    fontFamily: 'Merienda',
                  ),
...
                    },
                  ),
                ),

//==============================Blog Section====================================
                const Text(
                  "Blogs",
                  style: TextStyle(
                    color: Color(0xFF535699),
                    fontWeight: FontWeight.bold,
                    fontSize: 20,
                    fontFamily: 'Merienda',
                  ),
...
