...
    super.initState();
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const ValueKey("aboutuspage"),
      appBar: AppBar(
        title: const Text(
          "About Us",
          style: TextStyle(fontFamily: "Merienda", fontSize: 14),
        ),
        backgroundColor: const Color(0xFF535699),
...
